Add meta information

--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/images/avatar.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Ian Stewart - my homepage and portfolio landing page" />
+
+    <meta property="og:title" content="Ian Stewart" />
+    <meta
+      property="og:description"
+      content="Ian Stewart - my homepage and portfolio landing page" />
+    <meta property="og:image" content="https://ianpstewart.com/images/og-image.jpg" />
+    <meta property="og:url" content="https:/ianpstewart.com" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="article:author" content="Ian Stewart" />
+
     <title>Ian Stewart</title>
   </head>
   <body>
